<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_edt"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:text="@string/txt_update_info"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_avartar"
            android:elevation="10dp"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autofillHints="emailAddress"
            android:background="@drawable/bg_custom_profile_edt"
            android:hint="@string/txt_name"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />
    </TableRow>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_custom_profile_edt"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSave"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/txt_save"
            android:textAllCaps="false"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btCancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_custom_bottom_nav"
            android:text="@string/txt_cancel"
            android:textAllCaps="false"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold" />
    </TableRow>
</LinearLayout>
