<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frOnFocus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/ivTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="40dp"
        android:src="@mipmap/ic_close"
        android:visibility="gone"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <TableRow
        android:id="@+id/trThemeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="20dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@mipmap/ic_back"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvThemeName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txt_theme_name"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvWhatToFocus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="italic"
                android:visibility="gone" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivNext"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@mipmap/ic_next"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />
    </TableRow>

    <FrameLayout
        android:id="@+id/frCountDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivSpeaker"
            android:layout_width="22sp"
            android:layout_height="22sp"
            android:layout_margin="20dp"
            android:src="@drawable/ic_lv_speaker"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCountDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/txt_25_00"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFocusDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_focus_25_00"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btStart"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="100dp"
        android:background="@drawable/custom_button"
        android:text="@string/txt_start"
        android:textAllCaps="false"
        android:textColor="@color/purple_500" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btExit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="100dp"
        android:background="@drawable/custom_button"
        android:text="@string/txt_exit"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lnCongrat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvCongrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="80dp"
            android:text="@string/txt_congrat"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btGift"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_button"
            android:text="@string/txt_your_gift"
            android:textAllCaps="false"
            android:textColor="@color/purple_500" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnPokemon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivPokemon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_pokemon"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvPokemonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/txt_pokemon_name"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btCollection"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/custom_button"
            android:text="@string/txt_collection"
            android:textAllCaps="false"
            android:textColor="@color/purple_500"
            android:visibility="visible" />
    </LinearLayout>
</FrameLayout>